force-app/main/default/objects/Assessment_Opportunity__c/Assessment_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Assessment Opportunity</label>
    <nameField>
        <displayFormat>AO{0000000}</displayFormat>
        <label>Assessment Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>