force-app/main/default/objects/Assessment_Opportunity__c/fields/BA_Delegated_Authority__c.field-meta.xml
<CustomField>
    <fullName>BA_Delegated_Authority__c</fullName>
    <description>Field used in email template US-2441</description>
    <formula>TEXT(Business_Assessment__r.Delegated_Authority__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BA Delegated Authority</label>
    <type>Text</type>
</CustomField>