force-app/main/default/objects/Assessment_Opportunity__c/fields/BA_Economic_Group_Risk_Appetite__c.field-meta.xml
<CustomField>
    <fullName>BA_Economic_Group_Risk_Appetite__c</fullName>
    <description>Field used in email template US-2441</description>
    <formula>TEXT(Business_Assessment__r.Economic_Group_Risk_Appetite__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BA Economic Group Risk Appetite</label>
    <type>Text</type>
</CustomField>