force-app/main/default/objects/Assessment_Opportunity__c/fields/BA_Group_Parent_Client_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>BA_Group_Parent_Client_Coordinator__c</fullName>
    <description>Field used in email template US-2441</description>
    <formula>Business_Assessment__r.Group_Parent_Client_Coordinator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BA Group Parent Client Coordinator</label>
    <type>Text</type>
</CustomField>