force-app/main/default/objects/Assessment_Opportunity__c/fields/BA_NBAC_Committee__c.field-meta.xml
<CustomField>
    <fullName>BA_NBAC_Committee__c</fullName>
    <description>Field used in email template US-2441</description>
    <formula>TEXT(Business_Assessment__r.NBAC_Committee__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BA NBAC Committee</label>
    <type>Text</type>
</CustomField>