force-app/main/default/objects/Assessment_Opportunity__c/fields/BA_NBAC_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>BA_NBAC_Meeting_Date__c</fullName>
    <formula>Business_Assessment__r.NBAC_Meeting_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BA NBAC Meeting Date</label>
    <type>Date</type>
</CustomField>