force-app/main/default/objects/Assessment_Opportunity__c/fields/BA_Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>BA_Submission_Type__c</fullName>
    <description>Field used in email template US-2441</description>
    <formula>TEXT(Business_Assessment__r.Submission_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BA Submission Type</label>
    <type>Text</type>
</CustomField>