force-app/main/default/objects/Assessment_Opportunity__c/fields/Business_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Business_Assessment__c</fullName>
    <label>Business Assessment</label>
    <referenceTo>Business_Assessment__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Assessment_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>