force-app/main/default/objects/Assessment_Opportunity__c/fields/Business_Assessment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Business_Assessment_Milestone__c</fullName>
    <description>The field used to track milestone change on Business Assessment object - necessary for email alert.</description>
    <label>Business Assessment Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction Overview</fullName>
            </value>
            <value>
                <fullName>Stakeholder Contribution</fullName>
            </value>
            <value>
                <fullName>Finalisation</fullName>
            </value>
            <value>
                <fullName>Supported</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>