force-app/main/default/objects/Assessment_Opportunity__c/fields/ConditionsPrecedentMetDate__c.field-meta.xml
<CustomField>
    <fullName>ConditionsPrecedentMetDate__c</fullName>
    <description>Track the date when the conditions precedent have been fully met/waived</description>
    <label>ConditionsPrecedentMetDate</label>
    <type>DateTime</type>
</CustomField>