force-app/main/default/objects/Assessment_Opportunity__c/fields/ConditionsSubsequentMetDate__c.field-meta.xml
<CustomField>
    <fullName>ConditionsSubsequentMetDate__c</fullName>
    <description>Track the date when the conditions subsequent have been fully met</description>
    <label>ConditionsSubsequentMetDate</label>
    <type>DateTime</type>
</CustomField>