force-app/main/default/objects/Assessment_Opportunity__c/fields/CreditPaperSubmittedDate__c.field-meta.xml
<CustomField>
    <fullName>CreditPaperSubmittedDate__c</fullName>
    <description>Track the date when the credit users have submitted the credit paper for credit approval</description>
    <label>CreditPaperSubmittedDate</label>
    <type>DateTime</type>
</CustomField>