force-app/main/default/objects/Assessment_Opportunity__c/fields/CreditProcessStartDate__c.field-meta.xml
<CustomField>
    <fullName>CreditProcessStartDate__c</fullName>
    <description>Track the date when the Credit process was started by the credit users</description>
    <label>CreditProcessStartDate</label>
    <type>DateTime</type>
</CustomField>