force-app/main/default/objects/Assessment_Opportunity__c/fields/DAApprovalObtainedDate__c.field-meta.xml
<CustomField>
    <fullName>DAApprovalObtainedDate__c</fullName>
    <description>Track the date when the credit approval was given for the credit paper</description>
    <label>DAApprovalObtainedDate</label>
    <type>DateTime</type>
</CustomField>