force-app/main/default/objects/Assessment_Opportunity__c/fields/DueDiligenceCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>DueDiligenceCompletedDate__c</fullName>
    <description>Track the date when the due diligence of the opportunity was completed by the opportunity owner</description>
    <label>DueDiligenceCompletedDate</label>
    <type>DateTime</type>
</CustomField>