force-app/main/default/objects/Assessment_Opportunity__c/fields/Is_Opportunity_part_of_Client_Budget__c.field-meta.xml
<CustomField>
    <fullName>Is_Opportunity_part_of_Client_Budget__c</fullName>
    <description>US-2276 - field to be used in rollup summary  field to calculate number of the opportunities that are not part of the client budget.</description>
    <label>Is Opportunity part of Client Budget?</label>
    <length>3</length>
    <type>Text</type>
</CustomField>