force-app/main/default/objects/Assessment_Opportunity__c/fields/LegalCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>LegalCompletedDate__c</fullName>
    <description>Track the date when the legal team have completed the legal agreement</description>
    <label>LegalCompletedDate</label>
    <type>DateTime</type>
</CustomField>