force-app/main/default/objects/Assessment_Opportunity__c/fields/LegalStartsDraftDate__c.field-meta.xml
<CustomField>
    <fullName>LegalStartsDraftDate__c</fullName>
    <description>Track the date when the deal captain has briefed the legal team to start the legal process</description>
    <label>LegalStartsDraftDate</label>
    <type>DateTime</type>
</CustomField>