force-app/main/default/objects/Assessment_Opportunity__c/fields/MNPI__c.field-meta.xml
<CustomField>
    <fullName>MNPI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether there is an MNPI opportunity included on Assessment Opportunity</description>
    <label>MNPI</label>
    <type>Checkbox</type>
</CustomField>