force-app/main/default/objects/Assessment_Opportunity__c/fields/Related_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field was created mainly for the prupose of email notification US-2441</description>
    <label>Related Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assessment_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>