force-app/main/default/objects/Assessment_Opportunity__c/fields/SanctionChangesApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>SanctionChangesApprovalDate__c</fullName>
    <description>Track the date when/if any sanction change approval were made, only occurs if sanction changes were made</description>
    <label>SanctionChangesApprovalDate</label>
    <type>DateTime</type>
</CustomField>