force-app/main/default/objects/Assessment_Opportunity__c/fields/SanctionChangesDate__c.field-meta.xml
<CustomField>
    <fullName>SanctionChangesDate__c</fullName>
    <description>Track the date when/if any sanction changes were made to the credit paper and when those changes were made</description>
    <label>SanctionChangesDate</label>
    <type>DateTime</type>
</CustomField>