force-app/main/default/objects/Assessment_Opportunity__c/fields/Total_SB_Gross_Participation__c.field-meta.xml
<CustomField>
    <fullName>Total_SB_Gross_Participation__c</fullName>
    <description>The total amount that SB will be providing the client for the opportunities selected for the business assessment. Change to Notional field SGPRT-1229</description>
    <inlineHelpText>The total amount that SB will be providing the client for the opportunities selected for the business assessment</inlineHelpText>
    <label>Total SB Gross Participation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>